# Leadroom

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  LICENSE  NOTICE.md  PROJECT_PHASES.md  PROVIDER_COMPARISON.md  README.md  RELEASE.md  SECURITY.md  TEST_STRATEGY.md  THIRD_PARTY_NOTICES.md  lead_pipeline.py  lead_pipeline_v2.py  lead_test.py  lead_yell.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_cli.py  run_desktop.py  test_scrape.py
.github/: PULL_REQUEST_TEMPLATE.md
app/: __init__.py  api.py  compliance.py  config.py  data_management.py  database.py  email_delivery.py  enrichment.py  export.py  filters.py  local_data.py  metrics.py  models.py  normalizer.py  outreach_ai.py  parser.py  pipeline.py  preflight.py  scoring.py  scraper.py  search.py  search_providers.py  secrets.py  storage.py
benchmarks/: __init__.py  evaluate_filters.py  filter_cases.json  run_search_benchmark.py  search_cases.json
docs/: DEPENDENCY_LICENSES.md  PACKAGING.md
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
installer/: Leadroom.iss
scripts/: build-release.ps1  check.ps1  clean-install-state.ps1  import-osm.ps1  install-bootstrap.ps1  package.ps1  release-check.ps1  setup-local-data.ps1  setup-local-updates.ps1  test-installer-cancel.ps1  test-installer.ps1
tests/: test_api.py  test_compliance.py  test_config_preflight.py  test_data_management.py  test_database.py  test_desktop.py  test_email_delivery.py  test_enrichment.py  test_export.py  test_filter_benchmark.py  test_filters.py  (+9 more)
(+36 files in other folders)
